--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* general */
 * {
     padding: 0;
     margin: 0;
@@ -6,4 +7,88 @@
 
 body {
     font-family: roboto, sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6 { 
+    color: #1d273d;
+    font-weight: 300;
+}
+
+.container,
+.container1 {
+    width: 90%;
+    max-width: 62.5rem;
+    margin: auto;
+    overflow: hidden;
+}
+
+.container1 {
+    margin: 3.75rem 0;
+}
+
+h1 {
+    font-size: 3.125rem; 
+}
+
+/* header */
+
+header::before {
+    content: "";
+    display: block;
+    margin-bottom: 5rem;
+}
+
+nav {
+    width: 100%;
+    height: 5rem;
+    background: #fff;
+    border-bottom: 1px solid transparent;
+    box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, .2);
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    /* transition: ease-in-out 0.5s; */
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    height: 5rem;
+    width: 100%;
+    align-items: center;
+}
+
+.nav .logo {
+    height: 5rem;
+}
+
+
+.nav .logo img {
+    height: 100%;
+    vertical-align: top;
+}
+
+.header--links {
+    font-weight: 300;
+}
+
+nav .header--links a {
+    color: #5d6678;
+    text-decoration: none;
+    margin-left: 1.25rem;
+}
+
+.hamburger {
+    width: 5rem;
+    height: 5rem;
+
+    text-align: center;
+    z-index: 100;
+    cursor: pointer;
+    /* transition: color 0.5s ease-in; */
+}
+
+.hamburger > i{
+    font-size: 25px;
+    line-height: 80px;
 }
