--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ nav {
     height: 5rem;
     width: 100%;
     align-items: center;
+    padding: 0 2.5rem;
 }
 
 .nav .logo {
@@ -206,7 +207,7 @@ nav .header--links a {
 
 /* questions */
 .questions {
-    width: 100%;
+    /* width: 100%; */
     height: 37.5rem;
     display: flex;
     justify-content: space-between;
@@ -342,6 +343,69 @@ nav .header--links a {
 .box-skills i{
     color: #1fde82;
     font-size: 1.25rem;
+}
+
+
+/* footer */
+
+footer {
+    background: #f2f2f2;
+    padding: 3.75rem 0;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: auto;
+}
+
+.partFooter {
+    width: 20%;
+    text-align: center;
+}
+
+.partFooter h4 {
+    color: #1d273d;
+    /* font-size: 1.25rem; */
+    margin-bottom: 1.25rem;
+}
+
+.partFooter a{
+    display: block;
+    text-decoration: none;
+    color: #5d6678;
+    /* font-weight: 300; */
+    transition: color .3s ease-in-out;
+    margin-bottom: .625rem;
+}
+
+.partFooter img {
+    width: 25%;
+}
+
+.partFooter a:hover {
+    color: #1fde82;
+}
+
+.social-media i {
+    font-size: 1.25rem;
+    display: inline-block;
+    color: #adb6c7;
+    border: 1px solid #adb6c7;
+    border-radius: 50%;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.25rem;
+    cursor: pointer;
+    margin-top: 1.25rem;
+    text-align: center;
+    transition: all ease-in-out .3s;
+    margin-right: .3125rem;
+}
+
+.social-media i:hover {
+    color: #fff;
+    background-color: #1fde82;
+    border-color: #1fde82;
 }
 
 
