--- a/css/responsive.css
+++ b/css/responsive.css
@@ -104,11 +104,44 @@
     }
 
     .header--links {
-        display: none;
+        position: fixed;
+
+        /* fallback for old browsers */
+        background: #c2e59c;
+        
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: -webkit-linear-gradient(to right, #64b3f4, #c2e59c);
+        
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background: linear-gradient(to right, #64b3f4, #c2e59c); 
+
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-evenly;
+
+        clip-path: circle(0.2% at 100% 0);
+
+        transition: ease-in-out 0.5s;
+    }
+
+    .nav .menuTwo {
+        clip-path: circle(126.0% at 100% 0);
+    }
+
+    .nav .header--links a {
+        color: aliceblue;
+        font-weight: bold;
+        font-size: 1.5rem;
     }
 
     .hamburger {
         display: block;
+        
     }
 
     /* About us */
